--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@ select:focus
         <p>Welcome</p>
         <input type="email" placeholder="Email"><br>
         <input type="password" placeholder="Password"><br>
-        <input type="button" value="Sign in"><br>
-        <a href="#">Forgot Password?</a>
+<!--         <input type="button" value="Sign in"><br> -->
+        <a href="dashboard.html">Sign in</a>
     </form>
 
     <div class="drops">
